syntax="proto3";
package squaretroot;
option  go_package=".squareroot/sqarerootPB";
message SqaureRootRequest{
  int32 number=1;
}
message SquareRootResponse{
  double numberRoot=1;
}
service SquareRootService{
  rpc SquareRoot(SqaureRootRequest) returns (SquareRootResponse){};
}